# home-accounts

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  home-accounts.code-workspace
.github/: copilot-instructions.md
.github/instructions/: coding-style.instructions copy.md  coding-style.instructions.md  cpp.instructions.md
.github/workflows/: cmake.yml
ai/: features.md
docs/: index.md
msw/: .gitignore  HomeAccounts.rc  HomeAccounts.vcxproj  HomeAccounts.vcxproj.filters  README.md  common.props  csv.vcxproj  csv.vcxproj.filters  data.vcxproj  data.vcxproj.filters  file.vcxproj  file.vcxproj.filters  home-accounts.sln  resource.h  vcpkg.json
spec/: bugs.md  features.md  logs.md  memo.md
src/: CMakeLists.txt
src/csv/: CMakeLists.txt  ColumnType.cpp  ColumnType.h  CsvExceptions.h  CsvParser.cpp  CsvParser.h  Wrapper.cpp  Wrapper.h  column_type.c  column_type.h  csv.c  csv.h  csv_parser.c  csv_parser.h  date_time.c  date_time.h  defs.h  err.h  int.c  int.h  item.h  list.c  list.h  money.c  money.h  parser_options.h  segment.c  segment.h  segmental_csv_parser.c  segmental_csv_parser.h  segments.h  str.c  str.h  timestamp.c  timestamp.h  utils.c  utils.h
src/data/: AccountsDao.cpp  AccountsDao.h  CMakeLists.txt  ConfigPodsTraits.cpp  ConfigPodsTraits.h  CsvDao.h  CsvIdVecDao.h  CsvRowTraits.h  CsvVecDao.h  CxxDefs.h  Dao.h  DataDao.cpp  DataDao.h  DataFile.cpp  DataFile.h  DataImportDao.cpp  DataImportDao.h  ItemTraits.h  ItemWrap.cpp  ItemWrap.h  ItemWrapper.cpp  ItemWrapper.h  Joint.h  RowDao.h  StdStreamAccessor.h  TypeGetter.h  TypeTraits.cpp  TypeTraits.h  account.c  account.h  config_pods.h  data.c  data.h  defs.h  item.c  item.h  list.c  list.h  (+4 more)
src/gui/: Algos.h  BiMap.h  CMakeLists.txt  CachedTable.cpp  CachedTable.h  CellAttrs.cpp  CellAttrs.h  ChangePassDialog.cpp  ChangePassDialog.h  ChangePassDialogBase.cpp  ChangePassDialogBase.h  ColLabels.cpp  ColLabels.h  Common.cpp  Common.h  Configs.h  CsvDoc.cpp  CsvDoc.h  CsvTable.h  Defs.h  HaApp.cpp  HaApp.h  HaArtProvider.cpp  HaArtProvider.h  HaCsv.cpp  HaCsv.h  HaCsvTemplate.h  HaDefs.h  HaDoc.h  HaDocument.cpp  HaDocument.h  HaDocumentBase.cpp  HaDocumentBase.h  HaGdi.cpp  HaGdi.h  HaGrid.cpp  HaGrid.h  HaGridCellAttrProvider.cpp  HaGridCellAttrProvider.h  HaGridTemplate.h  (+24 more)
src/gui/account/: AccountDoc.cpp  AccountDoc.h  AccountGrid.cpp  AccountGrid.h  AccountGridCellAttrProvider.cpp  AccountGridCellAttrProvider.h  AccountPanel.cpp  AccountPanel.h  AccountTable.cpp  AccountTable.h  CMakeLists.txt
src/gui/accounts/: AccountsDoc.cpp  AccountsDoc.h  AccountsGrid.cpp  AccountsGrid.h  AccountsPanel.cpp  AccountsPanel.h  AccountsTable.cpp  AccountsTable.h  CMakeLists.txt
src/gui/bill/: BillPanel.cpp  BillPanel.h  CMakeLists.txt  PasteBillDialog.cpp  PasteBillDialog.h
src/gui/configs/: AccountTypesTable.cpp  AccountTypesTable.h  AccountsGridCellAttrProvider.cpp  AccountsGridCellAttrProvider.h  AccountsTable.cpp  AccountsTable.h  CMakeLists.txt  ChannelsTable.cpp  ChannelsTable.h  ConfigsGrid.cpp  ConfigsGrid.h  ConfigsGridCellAttrProvider.cpp  ConfigsGridCellAttrProvider.h  ConfigsPanel.cpp  ConfigsPanel.h  OwnersTable.cpp  OwnersTable.h
src/gui/data/: CMakeLists.txt  DataDoc.cpp  DataDoc.h  DataGrid.cpp  DataGrid.h  DataGridCellAttrProvider.cpp  DataGridCellAttrProvider.h  DataPanel.cpp  DataPanel.h  DataTable.cpp  DataTable.h  HaDataGrid.cpp  HaDataGrid.h  HaDataGridCellAttrProvider.cpp  HaDataGridCellAttrProvider.h  HaDataPanel.cpp  HaDataPanel.h  HaDataTable.cpp  HaDataTable.h  PasteBillDialog.cpp  PasteBillDialog.h
src/gui/ha/: CMakeLists.txt  CachedTable.cpp  CachedTable.h  ColLabels.cpp  ColLabels.h  CsvTable.h  DataGrid.cpp  DataGrid.h  DataTable.cpp  DataTable.h  DataTableCellAttrs.cpp  DataTableCellAttrs.h  Defs.h  HaApp.cpp  HaApp.h  HaDocument.cpp  HaDocument.h  HaMainFrame.cpp  HaMainFrame.h  HaView.cpp  HaView.h
src/gui/ha/res/: CMakeLists.txt  ha.fbp  ha.xrc
src/gui/import/: CMakeLists.txt  ImportColMapConf.cpp  ImportColMapConf.h  ImportDoc.cpp  ImportDoc.h  ImportGrid.cpp  ImportGrid.h  ImportGridCellAttrProvider.cpp  ImportGridCellAttrProvider.h  ImportPanel.cpp  ImportPanel.h  ImportTable.cpp  ImportTable.h
src/gui/panel/: CMakeLists.txt  CsvDoc.cpp  CsvDoc.h  HaPanel.h  HaRawPanel.cpp  HaRawPanel.h  NewSectionDialog.h  SegmentalCsvDoc.cpp  SegmentalCsvDoc.h
src/gui/raw/: CMakeLists.txt  ChangePassDialog.cpp  ChangePassDialog.h  Defs.h  HaRawPanel.cpp  HaRawPanel.h  NewSectionDialog.cpp  NewSectionDialog.h  RawApp.cpp  RawApp.h  RawDocument.cpp  RawDocument.h  RawMainFrame.cpp  RawMainFrame.h  RawPanel.cpp  RawPanel.h  RawView.cpp  RawView.h
src/gui/raw/res/: CMakeLists.txt  raw.fbp  raw.xrc
src/gui/res/: CMakeLists.txt  ChangePassDialog.fbp  LICENSE  MacOSXBundleInfo.plist.in  ha.fbp  ha.xrc  icon.xcf  menu_bar.xrc  noname.cpp  noname.h  resources.rc  widgets.fbp  widgets.xrc
src/gui/res/i18n/: HomeAccounts_en.po  HomeAccounts_zh.po  en.po  xrc_en.po  xrc_zh.po  zh.po
src/gui/res/images/: CMakeLists.txt
src/gui/utils/: CMakeLists.txt  DaoUtils.cpp  DaoUtils.h  GuiUtils.cpp  GuiUtils.h  IntClientData.h
test/: CMakeLists.txt
test/csv/: CMakeLists.txt  TestCsvParser.cpp  test_csv.cpp  test_csv_parser.cpp  test_date_time.cpp  test_int.cpp  test_list.cpp  test_money.cpp  test_str.cpp  test_utils.cpp
test/data/: CMakeLists.txt  TestCsvIdVecDao.cpp  TestCsvVecDao.cpp  TestCxxDefs.cpp  TestDao.cpp  TestDataDao.cpp  TestDataFile.cpp  TestDataImportDao.cpp  TestRowDao.cpp  test_data.cpp  test_list.cpp  test_rbtree.cpp
test/file/: CMakeLists.txt  TestCache.cpp  TestCrypto.cpp  TestDirectoryStore.cpp  TestFileStore.cpp  TestSectionFile.cpp  TestSectionRecord.cpp  TestSqlite3Store.cpp  TestStores.cpp
test/file/directory/: CMakeLists.txt  TestDirectory.cpp
test/file/simple/: CMakeLists.txt  TestCatalogRecord.cpp  TestCryptoFile.cpp
test/file/sqlite3/: CMakeLists.txt  TestSqlite3File.cpp
test/gui/: CMakeLists.txt  TestAlgos.cpp  TestBiMap.cpp  TestCsvDoc.cpp  TestHaDoc.cpp  TestUtils.cpp  sample.csv  sample1.csv
(+39 files in other folders)
